--- a/app/src/main/res/layout/fragment_detail_scan.xml
+++ b/app/src/main/res/layout/fragment_detail_scan.xml
@@ -150,7 +150,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="8dp"
-                android:hint="@string/header_cell"
+                android:hint="@string/cell_text"
                 android:visibility="gone"
                 app:errorEnabled="true"
                 tools:visibility="visible">
@@ -213,6 +213,33 @@
                     android:inputType="numberDecimal"
                     android:maxLines="1"
                     android:numeric="decimal"
+                    android:textStyle="bold" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/cellReceiverTextInputLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="8dp"
+                android:hint="@string/header_cell_receiver"
+                android:visibility="gone"
+                app:endIconDrawable="@drawable/ic_baseline_clear_24"
+                app:endIconMode="clear_text"
+                app:errorEnabled="true"
+                tools:visibility="visible">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/cellReceiverTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:editable="false"
+                    android:enabled="true"
+                    android:imeOptions="actionDone"
+                    android:inputType="none"
+                    android:maxLines="1"
                     android:textStyle="bold" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -299,7 +326,6 @@
                 android:gravity="right"
                 android:textSize="16sp"
                 tools:text="Ответственный" />
-
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
