--- a/app/src/main/res/anim/recycler_table_scan.xml
+++ b/app/src/main/res/anim/recycler_table_scan.xml
@@ -1,52 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:interpolator = "@android:anim/overshoot_interpolator">
 
     <!--    //Появление справа с изменением прозрачности-->
-<!--        <translate-->
-<!--            android:fromXDelta="200%"-->
-<!--            android:toYDelta="0%"-->
-<!--            android:duration="500"-->
-<!--            />-->
-<!--        <alpha-->
-<!--            android:fromAlpha="0.0"-->
-<!--            android:toAlpha="3.0"-->
-<!--            android:duration="2500"/>-->
-
-    <!--    //Появление справа с зумом-->
-<!--        <translate-->
-<!--            android:fromXDelta="200%"-->
-<!--            android:toYDelta="0%"-->
-<!--            android:duration="700"-->
-<!--            />-->
-
-<!--        <scale-->
-<!--            android:pivotX="50%"-->
-<!--            android:pivotY="50%"-->
-<!--            android:fromXScale="0"-->
-<!--            android:fromYScale="0"-->
-<!--            android:toXScale="1"-->
-<!--            android:toYScale="1"-->
-<!--            android:duration="700"-->
-<!--            />-->
-
-    <!--   //Появление из центра с изменением прозрачности и зумом-->
     <translate
         android:duration="500"
-        android:fromYDelta="100%"
+        android:fromXDelta="200%"
         android:toYDelta="0%" />
-
     <alpha
-        android:duration="500"
+        android:duration="700"
         android:fromAlpha="0.0"
-        android:toAlpha="1.0" />
+        android:toAlpha="3.0" />
 
-    <scale
-        android:duration="500"
-        android:fromXScale="0.5"
-        android:fromYScale="0.5"
-        android:pivotX="50%"
-        android:pivotY="50%"
-        android:toXScale="1"
-        android:toYScale="1" />
+    <!--        //Появление справа с зумом-->
+<!--    <translate-->
+<!--        android:duration="700"-->
+<!--        android:fromXDelta="200%"-->
+<!--        android:toYDelta="0%" />-->
+
+<!--    <scale-->
+<!--        android:duration="700"-->
+<!--        android:fromXScale="0"-->
+<!--        android:fromYScale="0"-->
+<!--        android:pivotX="50%"-->
+<!--        android:pivotY="50%"-->
+<!--        android:toXScale="1"-->
+<!--        android:toYScale="1" />-->
+
+    <!--   //Появление из центра с изменением прозрачности и зумом-->
+    <!--    <translate-->
+    <!--        android:duration="500"-->
+    <!--        android:fromYDelta="100%"-->
+    <!--        android:toYDelta="0%" />-->
+
+    <!--    <alpha-->
+    <!--        android:duration="500"-->
+    <!--        android:fromAlpha="0.0"-->
+    <!--        android:toAlpha="1.0" />-->
+
+    <!--    <scale-->
+    <!--        android:duration="500"-->
+    <!--        android:fromXScale="0.5"-->
+    <!--        android:fromYScale="0.5"-->
+    <!--        android:pivotX="50%"-->
+    <!--        android:pivotY="50%"-->
+    <!--        android:toXScale="1"-->
+    <!--        android:toYScale="1" />-->
 
 </set>
